# kbsb_api

./: .env  .gcloudignore  .gitignore  ICN_R10_part1.txt  ICN_R10_part2.txt  ICN_R1_part1.998  ICN_R1_part1.txt  ICN_R1_part2.998  ICN_R1_part2.txt  ICN_R2_part1.txt  ICN_R2_part2.txt  ICN_R3_part1.txt  ICN_R3_part2.txt  ICN_R4_part1.txt  ICN_R4_part2.txt  ICN_R5_part1.txt  ICN_R5_part2.txt  ICN_R6_part1.txt  ICN_R6_part2.txt  ICN_R7_part1.txt  ICN_R7_part2.txt  ICN_R8_part1.txt  ICN_R8_part2.txt  ICN_R9_part1.txt  ICN_R9_part2.txt  ICN_fide_R1.txt  ICN_fide_R10.txt  ICN_fide_R2.txt  ICN_fide_R3.txt  ICN_fide_R4.txt  ICN_fide_R5.txt  ICN_fide_R6.txt  ICN_fide_R7.txt  ICN_fide_R8.txt  ICN_fide_R9.txt  app-local.yaml  app-prod.yaml  app-staging.yaml  app-test.yaml  app.yaml  (+28 more)
data/: S_ICN2023-2024-R1.998  eloR1.csv  eloR1.xlsx  eloprocessing.csv  eloprocessing_R5.csv  eloprocessing_R6.csv  eloprocessing_R7.csv  fide_icn.csv  fide_icn2.csv  reeks_v1.csv  reeks_v2.csv  test_clubs.csv  test_series.csv  translations - kbsb.csv
kbsb/: __init__.py  main.py  settings.py
kbsb/club/: __init__.py  api_club.py  club.py  md_club.py
kbsb/content/: api_content.py  content.py  md_content.py
kbsb/core/: __init__.py  apikey.py  db.py  i18n.py  mail.py  mailbackend.py  site.py  static.py
kbsb/eloprocessing/: belgian_elo.py  elo.py  eloproc.py  fide_elo copy.py  fide_elo.py
kbsb/etl/: create_icclubs.py  doubleteam.py  i18n.py  ic_standings.py  import_club196.py  import_club_811.py  import_clubs.py  import_ic_previous.py  pair_icclubs.py  penalties.py  played_r1.py  playerlist_2_excel.py  playerlist_jan_automatic.py  read_reeks.py  read_series.py  setup_icc.py  setup_icc703.py  swap_secr_treas.py
kbsb/interclub/: __init__.py  api_interclub.py  interclub.py  md_interclub.py
kbsb/interclubs/: __init__.py  api_interclubs.py  elo.py  enrollments.py  fide_elo.py  icclubs.py  interclubs.py  md_elo.py  md_interclubs.py  mongo_interclubs.py  penalties.py  series.py  venues.py
kbsb/member/: __init__.py  api_member.py  md_member.py  member.py  mongo_member.py  mysql_member.py
kbsb/oldkbsb/: __init__.py  api_old.py  md_old.py  old.py
kbsb/report/: __init__.py  api_report.py  db_report.py  md_report.py  report.py
kbsb/templates/club/: clubdetails_de.md  clubdetails_en.md  clubdetails_fr.md  clubdetails_nl.md
kbsb/templates/interclub/: club_de.md  club_en.md  club_fr.md  club_nl.md  enrollment_de.md  enrollment_en.md  enrollment_fr.md  enrollment_nl.md  venues_de.md  venues_en.md  venues_fr.md  venues_nl.md
kbsb/templates/test/: test_nl.md
kbsb/ts/: api_ts.py  ts.py
libs/: frontmatter-3.0.7-py3-none-any.whl  reddevil-3.0.0-py3-none-any.whl  reddevil-3.0.1-py3-none-any.whl  reddevil-3.0.4-py3-none-any.whl  reddevil-3.0.5-py3-none-any.whl  reddevil-3.0.6-py3-none-any.whl  reddevil-3.1.0-py3-none-any.whl  reddevil-3.1.1-py3-none-any.whl  reddevil-3.2.0-py3-none-any.whl
scripts/: convert_files.py  convert_pages.py  su.py  test_email.py
tests/: conftest.py
tests/data/: frbe_db_decrop.sql
tests/factories/: __init__.py  interclubs_factory.py  interclubs_factory.py_  member_factory.py
tests/interclub/: test_api_interclub.py  test_series.py
tests/member/: test_api.py  test_mysql.py
