[tool.poetry]
name = "kbsb"
version = "1.0.0"
description = "API Website FRBE-KBSB-KSB"
authors = ["Ruben Decrop <ruben.decrop@frbe-kbsb-ksb.be>"]
license = "GPLv2"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.2.1"
colorlog = "^6.7.0"
fastapi = "^0.103.2"
google = "^3.0.0"
google-api-python-client = "^2.101.0"
google-auth = "^2.23.2"
google-cloud-secret-manager = "^2.16.4"
google-cloud-storage = "^2.11.0"
gunicorn = "^21.2.0"
Jinja2 = "^3.1.2"
markdown2 = "^2.4.10"
motor = "^3.3.1"
mysql-connector-python = "^8.1.0"
openpyxl = "^3.1.2"
passlib = "^1.7.4"
pymongo = "^4.5.0"
python-dateutil = "^2.8.2"
python-frontmatter = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-slugify = "^6.1.2"
PyYAML = "^6.0"
requests = "^2.31.0"
unidecode = "^1.3.7"
uvicorn = "^0.23.2"
weasyprint = "^57.2"
reddevil = {path = "libs/reddevil-3.2.0-py3-none-any.whl"}



[tool.poetry.group.dev.dependencies]
asyncio = "^3.4.3"
black = "^23.9.1"
httpx = "^0.22.0"
mypy = "^1.5.1"
polyfactory = "^2.9.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
