[tool.poetry]
name = "kbsb"
version = "1.0.0"
description = "API Website FRBE-KBSB-KSB"
authors = ["Ruben Decrop <ruben.decrop@frbe-kbsb-ksb.be>"]
license = "GPLv2"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.2.1"
fastapi = "^0.109.2"
google = "^3.0.0"
google-api-python-client = "^2.109.0"
google-auth = "^2.25.1"
google-cloud-secret-manager = "^2.16.4"
google-cloud-storage = "^2.13.0"
gunicorn = "^21.2.0"
Jinja2 = "^3.1.2"
mysql-connector-python = "^8.1.0"
openpyxl = "^3.1.2"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.1"
python-frontmatter = "^1.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-slugify = "^8.0.4"
PyYAML = "^6.0.1"
requests = "^2.31.0"
unidecode = "^1.3.7"
uvicorn = "^0.27.1"
reddevil = {path = "libs/reddevil-3.3.5-py3-none-any.whl"}



[tool.poetry.group.dev.dependencies]
asyncio = "^3.4.3"
black = "^23.9.1"
mypy = "^1.5.1"
polyfactory = "^2.9.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
